Make each par scroll sperately + fix line breaks in status Fixes #11

--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,8 @@ body {
   vertical-align: top;
   max-width: 500px;
   margin: 0 auto;
-
+  max-height: 50vh;
+  overflow-y: auto;
 }
 #avatar {
   display: inline-block;
